crates/plotnik-tests/tests/04-emit/bytecode/recursion/captured_nullable_recursive_match_only_definition.txt
A = (parenthesized_expression (A)?)
Q = (expression_statement (A) @x)
------------------ DIAGNOSTICS -------------------
error: `@x` cannot capture `(A)` because `A` produces no result value
 --> query.ptk:2:27
  |
1 | A = (parenthesized_expression (A)?)
  | ----------------------------------- `A` is defined here
2 | Q = (expression_statement (A) @x)
  |                           ^^^
  |
help: make `A` produce a result by changing `(parenthesized_expression (A)?)` to `(parenthesized_expression (A)?) @x_value` in definition `A`
help: or remove `@x` and capture a node pattern directly
